[package]
name = "in_memory"
version = "0.1.0"
authors = ["Eric Dattore <eric@dattore.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbopump = { path = "../../lib" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
